<resources>
    <string name="app_name">InputControl</string>
    <string name="hint_phone">Enter Phone Number</string>
    <string name="button_select_date">Select Date</string>
    <string name="button_select_time">Select Time</string>
    <string name="button_show_phone">Show Phone Number</string>
    <string name="txt_datePick">Your selection Date will appear here</string>
    <string name="txt_timePick">Your selection Time will appear here</string>
</resources>